forgot password added

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.9",
-    "nodemailer": "^6.7.5"
+    "nodemailer": "^6.7.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
